--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+### React-Specific Ignore File ###
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Environment
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
+# Build
+/build
+/.cache
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# System
+.DS_Store
